# cognite-sdk-python

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pr_body.md  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yaml  .release-please-config.json  .release-please-manifest.json  ASYNC_CONVERSION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PLAN.md  Pipfile  README.md  TODO_ASYNC_CONVERSION.md  USAGE_EXAMPLES.md  check_version_match.py  code_parser.py  codecov.yml  core-requirements.txt  example_agent_actions_simple.py  fix_all_remaining_apis.py  generate_code_snippets.py  generate_documentation_snippets.py  generate_from_spec.py  johan_mattivalg.py  local-dev.ipynb  local-dev.py  move_functions.sh  mypy.ini  pyproject.toml  (+13 more)
.devcontainer/: README.md  devcontainer.json  postCreateCommand.sh
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report--0-x-x-.md  bug-report--1-x-x-.md  bug-report--2-x-x-.md  bug-report.md  bug_report.md  feature-request--0-x-x-.md  feature-request--1-x-x-.md  feature-request.md
.github/_workflows/: build.yml  release.yaml
.github/actions/: setup.yml
.github/workflows/: _setup.yml  build.yml  cdf_auth.yaml  conventional-pr-title.yml  coverage-master.yml  manual-pre-release.yaml  release-please.yml  release-pypi-v8.yaml  release-v8.yaml  release.yaml  test_and_build.yml  verify-jupyter.yml  verify-streamlit.yml
cognite/: __init__.py  __main__.py  _constants.py  _data_objects.py  _helpers.py  _utils.py  assets.py  cloud_storage.py  config.py  data_objects.py  data_transfer_service.py  preprocessing.py  raw.py  similarity_search.py  tagmatching.py  timeseries.py
cognite/_protobuf_descriptors/: _api_timeseries_data_v1_pb2.py  _api_timeseries_data_v2_pb2.py
cognite/cli/: cli.py  cli_config.py  cli_ml.py  cli_models.py  config.py  ml.py
cognite/client/: __init__.py  _api_client.py  _async_api_client.py  _async_cognite_client.py  _async_http_client.py  _base.py  _basic_api_client.py  _cognite_client.py  _constants.py  _http_client.py  _org_client.py  _sync_api_client.py  _sync_cognite_client.py  _utils.py  _version.py  alpha.py  beta.py  cognite_client.py  config.py  constants.py  credentials.py  data_classes.py  exceptions.py  experimental.py  response.py  testing.py  utils.py
cognite/v04/: assets.py  cloud_storage.py  data_objects.py  dto.py  raw.py  tagmatching.py  timeseries.py
cognite/v05/: __init__.py  assets.py  cloud_storage.py  data_objects.py  depthseries.py  dto.py  events.py  files.py  hosting.py  raw.py  tagmatching.py  timeseries.py
cognite/v06/: datapoints.py  dto.py  models.py  sequences.py  time_series.py
cognite_units/: preprocess.py  show_conversions.py  timeseries_retrieve.py  unit_converter.py
dictionaries/: README.md  scalers.json  unit_conversion.json  unit_type_alias.json  unit_type_fundamental.json
docs/: Makefile  index.html  requirements.txt
docs/doctrees/: cognite.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  cognite.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: 3d.rst  agents.rst  ai.rst  appendix.rst  assets.rst  base_data_classes.rst  cognite.rst  cognite_client.rst  conf.py  conf_old_theme.py  conftest.py  contextualization.rst  core_data_model.rst  credential_providers.rst  data_ingestion.rst  data_modeling.rst  data_organization.rst  data_workflows.rst  deprecated.rst  documents.rst  events.rst  exceptions.rst  extensions_and_optional_dependencies.rst  files.rst  filters.rst  functions.rst  geospatial.rst  headings.py  hosted_extractors.rst  identity_and_access_management.rst  index.rst  labels.rst  limits.rst  metering.rst  modules.rst  postgres_gateway.rst  quickstart.rst  sdk.rst  sequences.rst  settings.rst  (+7 more)
examples/: README.md  agents_actions_example.py
examples/basics/: Introduction_to_Data_Exploration_CDP.ipynb  Learn to use CDP.ipynb  openindustrialdata.py
openapi/: default_spec.json  generator.py  openapi.py  spec_ts_normal.json  utils.py
openapi/tests/: test_generator.py
scripts/: add_capability.py  check_version_match.py  create_data_models.py  create_datapoint_subscription_test_data.py  create_dps_protobuf_files.sh  create_ts_for_integration_tests.py  deploy_code_snippets.sh  generate_code_snippets.py  generate_core_model.py  generate_extractor_extension_model.py  ila_streams_pr_e2e.py  ila_streams_records_smoke.py  precommit_wrapper.py  run_checks.py  test-pyodide.js  update_proto_files.py  verify_diagram_download.py
scripts/custom_checks/: docstr_examples.py  docstrings.py  version.py
scripts/sync_client_codegen/: codegen_utils.py  constants.py  create_sync_api.py  create_sync_client.py  main.py  sync_api_template.txt  sync_client_template.txt
scripts/toolkit/: README.md  cdf.toml  config.prod.yaml  config.python-sdk-contributor.yaml
test/: testAssets.py
tests/: conftest.py  test_assets.py  test_cloud_storage.py  test_config.py  test_data_transfer_service.py  test_preprocessing.py  test_raw.py  test_tag_matching.py  test_timeseries.py  test_utils.py  utils.py
tests/cli/: test_cli.py  test_cli_models.py
tests/test_client/: test_api_client.py  test_cognite_client.py  test_sdk_utils.py
tests/test_data_transfer_service/: test_data_transfer_service.py
tests/test_experimental/: test_analytics_models.py  test_datapoints.py  test_modelhosting.py  test_sequences.py  test_time_series.py
tests/test_stable/: test_assets.py  test_datapoints.py  test_dto.py  test_events.py  test_files.py  test_raw.py  test_tag_matching.py  test_timeseries.py
tests/test_v0_5/: test_assets.py  test_datapoints.py  test_dto.py  test_events.py  test_files.py  test_raw.py  (+2 more)
unit_tests/: api_mock_responses.py  constants.py  run_tests.py  test_config.py  test_data_objects.py  test_preprocessing.py  test_utils.py
(+887 files in other folders)
