[tool.poetry]
name = "cognite-sdk"

version = "5.6.4"

description = "Cognite Python SDK"
readme = "README.md"
documentation = "https://cognite-sdk-python.readthedocs-hosted.com"
authors = ["Erlend Vollset <erlend.vollset@cognite.com>"]

packages = [{ include="cognite", from="." }]

[tool.poetry.dependencies]
python = "^3.6"

requests = "^2"
requests_oauthlib = "^1"
msal = "^1"
sortedcontainers = "^2.2"
protobuf = ">=3.16.0"
pip = ">=20.0.0"  # make optional once poetry doesnt auto-remove it on "simple install"
numpy = { version = "^1.19", optional = true }
sympy = { version = "*", optional = true }

[tool.poetry.extras]
numpy = ["numpy"]
sympy = ["sympy"]
functions = ["pip"]
all = ["numpy", "sympy", "pip"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
