[tool.poetry]
name = "cognite-sdk"

version = "6.32.0"
description = "Cognite Python SDK"
readme = "README.md"
documentation = "https://cognite-sdk-python.readthedocs-hosted.com"
authors = ["Erlend Vollset <erlend.vollset@cognite.com>"]
license = "Apache-2.0"

packages = [{ include="cognite", from="." }]

[tool.ruff.per-file-ignores]
# let scripts use print statements
"scripts/*" = ["T201"]

[tool.poetry.dependencies]
python = "^3.8"

requests = "^2"
requests_oauthlib = "^1"
msal = "^1"
sortedcontainers = "^2.2"
protobuf = ">=3.16.0"
pip = ">=20.0.0"  # make optional once poetry doesn't auto-remove it on "simple install"
typing_extensions = ">= 4"
numpy = { version = "^1.20", optional = true }
sympy = { version = "*", optional = true }
pandas = { version = ">=1.4", optional = true }
backports-zoneinfo = { version = ">=0.2.1",  python = "<3.9", extras = ["tzdata"], optional = true}
# Windows does not have a ANSI database and need tzdata
tzdata = {version = ">=2023.3", markers = "sys_platform == 'win32'", optional = true }
geopandas = { version = ">=0.10.0", optional = true }
shapely = { version = ">=1.7.0", optional = true }
pyodide-http = {version = "^0.2.0", optional = true }
graphlib-backport = {version = "^1.0.0", python = "<3.9"}
PyYAML = {version = "^6.0", optional = true}

[tool.poetry.extras]
pandas = ["pandas", "backports-zoneinfo"]
numpy = ["numpy"]
geo = ["geopandas", "shapely"]
sympy = ["sympy"]
functions = ["pip"]
yaml = ["PyYAML"]
pyodide = ["pyodide-http"]  # keep pyodide related dependencies outside of 'all'
all = ["pandas", "geopandas", "shapely", "sympy", "pip", "backports-zoneinfo", "yaml"]

[tool.poetry.group.dev.dependencies]
docutils = "==0.15.2"
sphinx = "^5.0.1"
sphinx-rtd-theme = ">=1.0.0"
pytest = ">=7"
pytest-cov = ">=3"
pytest-rerunfailures = ">=10"
pytest-asyncio = ">=0"
pytest-xdist = ">=2"
twine = "^4.0.1"
pre-commit = "^2.20.0"
responses = "^0.21.0"
toml = "^0.10.2"
python-dotenv = "^0.20.0"
mypy = "^1"
types-urllib3 = "^1.26.16"
types-requests = "^2.28.1"
pep8-naming = "^0"
types-backports = "^0.1.3"
types-protobuf = "^4.22.0.2"
packaging = ">=23"
# Used in docstring examples
IPython = ">=7.0.0"


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
