[tool.poetry]
name = "cognite-sdk"

version = "7.53.2"
description = "Cognite Python SDK"
readme = "README.md"
documentation = "https://cognite-sdk-python.readthedocs-hosted.com"
authors = [
    "Erlend Vollset <erlend.vollset@cognite.com>",
    "Håkon Treider <hakon.treider@cognite.com>",
    "Anders Albert <anders.albert@cognite.com>"
]
license = "Apache-2.0"

packages = [{ include="cognite", from="." }]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# let scripts use print statements
"scripts/*" = ["T201"]

[tool.poetry.dependencies]
python = "^3.8"

requests = "^2"
requests_oauthlib = "^1"
msal = "^1"
protobuf = ">=4"
pip = ">=20.0.0"  # make optional once poetry doesn't auto-remove it on "simple install"
typing_extensions = ">= 4"
backports-zoneinfo = { version = ">=0.2.1",  python = "<3.9" }
# Windows does not have a ANSI database and need tzdata... pyodide also needs it:
tzdata = { version = ">=2024.1", markers = "platform_system == 'Windows' or platform_system == 'Emscripten'" }
numpy = [
    { version = ">=1.20, <1.25", python = "~3.8", optional = true },
    { version = "^1.25", python = ">=3.9, <3.12", optional = true },
    { version = "^1.26", python = "^3.12", optional = true },
]
sympy = { version = "*", optional = true }
pandas = [
    { version = ">=1.4, <2.1", python = "~3.8", optional = true },
    { version = ">=2.1", python = ">=3.9", optional = true },
]
geopandas = [
    { version = ">=0.10, <0.14", python = "~3.8", optional = true },
    { version = ">=0.14", python = ">=3.9", optional = true },
]
shapely = { version = ">=1.7.0", optional = true }
pyodide-http = { version = "^0.2.1", optional = true }
graphlib-backport = { version = "^1.0.0", python = "<3.9" }
PyYAML = { version = "^6.0", optional = true }

[tool.poetry.extras]
pandas = ["pandas"]
numpy = ["numpy"]
geo = ["geopandas", "shapely"]
sympy = ["sympy"]
functions = ["pip"]
yaml = ["PyYAML"]
pyodide = ["pyodide-http", "tzdata"]  # keep pyodide related dependencies outside of 'all'
all = ["numpy", "pandas", "geopandas", "shapely", "sympy", "pip", "PyYAML"]

[tool.poetry.group.dev.dependencies]
docutils = "==0.15.2"
sphinx = "^5.0.1"
sphinx-rtd-theme = ">=1.0.0"
pytest = ">=7"
pytest-cov = ">=3"
pytest-rerunfailures = ">=10"
pytest-asyncio = ">=0.23.5a0"
pytest-xdist = ">=2"
twine = "^4.0.1"
pre-commit = "^3"
responses = "^0"
toml = "^0"
python-dotenv = "^0"
mypy = "^1"
types-urllib3 = "^1.26.16"
types-requests = "^2.28.1"
pep8-naming = "^0"
types-backports = "^0"
types-protobuf = "^4.22.0.2"
types-PyYAML = "^6"
packaging = ">=23"
IPython = ">=7.0.0"  # Used in docstring examples
PyYAML = "^6.0"
pytest-icdiff = "*"  # Used for better diffs in pytest

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
